# BestDownloadManager

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
browser-extension/: background.js  manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  native_messaging.rs
src-tauri/src/download_manager/: http.rs  media_grabber.rs  mod.rs  queue.rs  security.rs  torrent.rs  youtube.rs
src/components/: AddDownloadModal.module.css  AddDownloadModal.tsx  Dashboard.module.css  Dashboard.tsx  DownloadItem.module.css  DownloadItem.tsx  PasswordManager.tsx  SchedulerModal.tsx  Settings.module.css  Settings.tsx  Sidebar.module.css  Sidebar.tsx
src/store/: downloadStore.ts
src/utils/: formatters.ts
