[package]
name = "best_download_manager"
version = "0.1.0"
description = "Best Download Manager (FOSS)"
authors = ["you"]
edition = "2021"

[lib]
name = "best_download_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
url = "2.5"
bytes = "1.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
librqbit = "8.1.1"
rusty_ytdl = "0.7"
